--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.5.0",
-    "aws-sdk": "^2.80.0"
+    "aws-sdk": "^2.80.0",
+    "aws-sns-publish": "^3.1.0"
   }
 }
